@@ -6012,6 +6012,9 @@
                 <para>
                     <itemizedlist>
                         <listitem>
+                            <para>Fixed problem #602916 (not working menu entry)</para>
+                        </listitem>
+                        <listitem>
                             <para>Fixed Ubuntu problem #369818 (incorrect sorting by size in panel)</para>
                         </listitem>
                         <listitem>
